fixed sizing of the website so visualizations aren't cut off

--- a/style.css
+++ b/style.css
@@ -6,10 +6,11 @@ p {
 }
 body {
     background-color: #e3f3ff;
-    background-attachment: fixed; 
+    background-attachment: fixed;
     background-repeat: no-repeat;
     min-height: 100vh;
     font-family: 'Verdana', sans-serif;
+    zoom: 1.0;
 }
 
 
@@ -107,10 +108,11 @@ body {
 
 [id^="fig"] > h2,
 [id^="fig"] > p {
-    width: calc(100% - 180px);
-    margin-left: auto !important;
-    margin-right: auto !important;
+    width: calc(100% - 360px);
+    margin-left: 180px !important;
+    margin-right: 180px !important;
     box-sizing: border-box;
+    transform: none !important;
 }
 
 .viz-frame {
